feat(products-api): add code field and improve search logic